# rz

./: Cargo.toml  GOALS.md  ISSUES.md  Makefile  README.md
.github/workflows/: release.yml
crates/rz-cli/: Cargo.toml
crates/rz-cli/src/: bootstrap.rs  lib.rs  log.rs  main.rs  status.rs  zellij.rs
crates/rz-hub/: Cargo.toml
crates/rz-hub/src/: lib.rs  main.rs  registry.rs  router.rs
crates/rz-protocol/: Cargo.toml
crates/rz-protocol/src/: lib.rs
src/: bootstrap.rs  lib.rs  log.rs  main.rs  protocol.rs  zellij.rs
