[package]
name = "rz-cli"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Agent-to-agent messaging over Zellij panes — spawn, send, list, watch, and orchestrate LLM agents from the CLI"
repository = "https://github.com/HodlOg/rz"
keywords = ["zellij", "agent", "llm", "multi-agent", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "rz"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
eyre = "0.6"
rz-protocol = { version = "0.3.1", path = "../rz-protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
